<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.storyapp.ui.main.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_addStoryFragment"
            app:destination="@id/addStoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.storyapp.ui.main.detail.DetailFragment"
        android:label="@string/detail_story"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <argument
            android:name="storyId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/addStoryFragment"
        android:name="com.example.storyapp.ui.main.addstory.AddStoryFragment"
        android:label="@string/add_story"
        tools:layout="@layout/fragment_add_story" >
        <action
            android:id="@+id/action_addStoryFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>